[package]
name = "agent"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
argh = { workspace = true }
axum = { workspace = true }
axum-h3 = { workspace = true }
bytes = { workspace = true }
channel-masque = { workspace = true }
h3-util = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true, features = ["channel"] }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tower = { workspace = true, features = ["util"] }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
