[package]
name = "camera-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
eframe = { workspace = true }
egui = { workspace = true }
msquic-async = { workspace = true }
opencv = { workspace = true }
schannel = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
