[package]
name = "channel-masque"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
futures-concurrency = { workspace = true }
h3 = { workspace = true }
h3-datagram = { workspace = true }
h3-util = { workspace = true, features = ["msquic-async"] }
http = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true, features = ["channel"] }
hyper = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
tower = { workspace = true, features = ["util"] }
tower-http = { workspace = true }
tower-jwt = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
argh = { workspace = true }
h3-quinn = { workspace = true }
quinn = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
serde_json = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
