[package]
name = "webrtc-app"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
argh = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true, features = ["rustls-tls-native-roots"] }
webrtc = { workspace = true }
